; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/calc/extr_utl_mpfr.c_convert_real_integer.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/calc/extr_utl_mpfr.c_convert_real_integer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@calc = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @convert_real_integer(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  switch i32 %3, label %14 [
    i32 130, label %4
    i32 128, label %5
    i32 131, label %5
    i32 129, label %5
  ]

4:                                                ; preds = %1
  br label %14

5:                                                ; preds = %1, %1, %1
  %6 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @calc, i32 0, i32 0), align 4
  %7 = icmp eq i32 %6, 130
  br i1 %7, label %8, label %13

8:                                                ; preds = %5
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @calc, i32 0, i32 1, i32 0), align 4
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @calc, i32 0, i32 1, i32 0), align 4
  %11 = call i32 @mpfr_trunc(i32 %9, i32 %10)
  %12 = call i32 @apply_int_mask(%struct.TYPE_4__* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @calc, i32 0, i32 1))
  br label %13

13:                                               ; preds = %8, %5
  br label %14

14:                                               ; preds = %1, %13, %4
  ret void
}

declare dso_local i32 @mpfr_trunc(i32, i32) #1

declare dso_local i32 @apply_int_mask(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
